<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_time_line"
        android:icon="@drawable/ic_nav_timeline_24"
        android:title="@string/dashboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/ic_nav_timetable_24"
        android:title="@string/time_table"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_attendance"
        android:icon="@drawable/ic_nav_attendance_24"
        android:title="@string/attendance"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_noticeboard"
        android:icon="@drawable/ic_nav_noticeboard_24"
        android:title="@string/noticeboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_fee_payments"
        android:icon="@drawable/ic_nav_fee_payment_24"
        android:title="@string/fee_payments"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_students"
        android:icon="@drawable/ic_nav_profile_24"
        android:title="@string/student_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/navigation_employee_profile"
        android:icon="@drawable/ic_nav_profile_24"
        android:title="@string/employee_profile"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_student_marks"
        android:icon="@drawable/ic_nav_student_marks_24"
        android:title="@string/marks_report"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_schedule_exam"
        android:icon="@drawable/ic_nav_schedule_exam_24"
        android:title="@string/schedule_exam"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_message_center"
        android:icon="@drawable/ic_nav_message_center_24"
        android:title="@string/message_centre"
        app:showAsAction="never"/>
    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_nav_logout_24"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>