<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_navigation"
    app:startDestination="@id/navigation_time_line">
    <fragment
        android:id="@+id/navigation_time_line"
        android:name="com.pronted.presentation.timeline.ParentTimelineFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_parent_timeline" />

    <fragment
        android:id="@+id/navigation_timetable"
        android:name="com.pronted.presentation.timetable.ParentTimetableFragment"
        android:label="@string/time_table"
        tools:layout="@layout/fragment_parent_timetable" />
    <fragment
        android:id="@+id/navigation_noticeboard"
        android:name="com.pronted.presentation.noticeboard.ParentNoticeboardFragment"
        android:label="@string/noticeboard"
        tools:layout="@layout/fragment_parent_noticeboard" />
    <fragment
        android:id="@+id/navigation_fee_payments"
        android:name="com.pronted.presentation.feepayments.StudentFeeDetailsFragment"
        android:label="@string/fee_amp_payment"
        tools:layout="@layout/fragment_student_fee_details" />
    <fragment
        android:id="@+id/navigation_student_marks"
        android:name="com.pronted.presentation.studentmarks.StudentMarksFragment"
        android:label="@string/marks_report"
        tools:layout="@layout/fragment_student_marks" />

    <fragment
        android:id="@+id/navigation_student_profile"
        android:name="com.pronted.presentation.profile.StudentProfileFragment"
        android:label="@string/student_profile"
        tools:layout="@layout/fragment_student_profile" />

    <fragment
        android:id="@+id/navigation_schedule_exam"
        android:name="com.pronted.presentation.scheduleexam.ParentScheduleExamFragment"
        android:label="@string/schedule_exam"
        tools:layout="@layout/fragment_schedule_exam" />

</navigation>