<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cl_fee_term_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:background="@color/white"
        android:elevation="@dimen/_2sdp"
        android:padding="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_fee_term_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:inputType="textCapSentences"
            android:text="@string/fee_terms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_amount_paid_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/amount_paid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fee_term_header" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_amount_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/rupee_symbol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_amount_paid_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>