<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filter_class_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/btn_outline_dark_border"
            android:fontFamily="@font/open_sans_medium"
            android:padding="@dimen/_6sdp"
            android:text="@string/select_class"
            app:drawableRightCompat="@drawable/ic_baseline_arrow_drop_down_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filter_exam_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/btn_outline_dark_border"
            android:fontFamily="@font/open_sans_medium"
            android:padding="@dimen/_6sdp"
            android:text="@string/select_exam"
            app:drawableRightCompat="@drawable/ic_baseline_arrow_drop_down_24"
            app:layout_constraintTop_toBottomOf="@id/filter_class_section"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.aitsuki.swipe.SwipeMenuRecyclerView
            android:id="@+id/rv_exam"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_8sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_exam_section" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_exam_section">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/emptynotice"
                app:layout_constraintBottom_toTopOf="@+id/tv_no_time_table"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_no_time_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/open_sans_medium"
                android:gravity="center"
                android:text="@string/exam_schedule_is_not_available"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:visibility="gone"
            android:contentDescription="@string/submit"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>